--- a/index.html
+++ b/index.html
@@ -9,5 +9,28 @@
 </head>
 <body>
 
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-offset-1 col-lg-6">
+				<input type="text" class="form-control" id="gif-text">
+			</div><!-- ./ col-lg-6 -->
+			<div class="col-lg-4">
+				<button type="button" id="buscar-gif" class="btn btn-default">Buscar gif</button>
+			</div><!-- ./col-lg-4 -->
+		</div><!-- ./row -->
+		<div class="row">
+			<div class="col-lg-offset-3 col-lg-6" id="elementos"></div>
+		</div><!-- ./row -->
+
+	</div><!-- ./container -->
+
+
+<!-- archivos script -->
+	<!-- enlace JQUERY -->
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  	crossorigin="anonymous"></script>
+  	<!-- enlace  Javascript Bootstrap-->
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
